--- a/day-1.html
+++ b/day-1.html
@@ -76,7 +76,37 @@
   <h2>Try it!</h2>
   <p>Now you try it!</p>
   <p>Make at least 5 more examples of templates yourself.</p>
+  <p>
+    <script>
+      let noun = "peacock";
+      let noun2 = "cauliflower";
+      let noun3 = "scooter";
+      let noun4 = "minivan";
+      let verb = "sleeping";
+      let verb2 = "running";
+      let verb3 = "jumping";
+      let verb4 = "skiing";
+      let adjective = "grey";
+      let adjective2 = "hard";
+      let adjective3 = "soft";
+      let adjective4 = "red";
+      let adverb = "quickly";
+      let adverb2 = "slowly";
+      let adverb3 = "rarely";
 
+      document.write(`Once upon a ${noun} dreary, while I pondered, ${adjective4} and ${adjective}, `);
+      document.write("<br>");
+      document.write(`Over many a ${adjective2} and ${adjective3} volume of ${noun4}— `);
+      document.write("<br>");
+      document.write(`While I nodded, ${adverb2} ${verb3}, ${adverb3} there came a ${verb2}, `);
+      document.write("<br>");
+      document.write(`As of some one ${adverb} ${verb}, ${verb4} at my chamber door. `)
+      document.write("<br>");
+      document.write(`“’Tis some ${noun2},” I muttered, “tapping at my ${noun3}— `)
+      document.write("<br>");
+      document.write(`Only this and nothing more.`)
+    </script>
+  </p>
 
 </body>
 
