--- a/day-2a.html
+++ b/day-2a.html
@@ -34,7 +34,7 @@
   </section>
   <h2>You Try it!</h2>
   <p>Now write a message using both the dog's name and the user's name from above. Note: You don't have to ask the user
-    again. The variables have already been assinged in the above section. </p>
+    again. The variables have already been assigned in the above section. </p>
   <p>
 
     <script>
