finished day 2/a/b/ part of c

--- a/day-2b.html
+++ b/day-2b.html
@@ -18,12 +18,11 @@
   <h3>You Try It!</h3>
   <p>Ask for the user's favorite ice cream flavor. And write a message about it.</p>
   <script>
-    let favIceCream;
     // try it! prompt for favorite ice cream
-
+    favIceCream = prompt(`What is your fave ice cream ${userName}?`);
 
     // try it! Write a message about the favorite ice cream flavor.
-    document.write();
+    document.write(`${userName}, you should refrain from eating too much ${favIceCream} flavored ice cream, else you become corpulent.`);
   </script>
 </body>
 </html>
