--- a/day-2c.html
+++ b/day-2c.html
@@ -13,8 +13,12 @@
   <h3>You Try it!</h3>
   <p>Ask the user two questions using propmt. Then give the user a personalized response using the data entered.</p>
   <script>
-
-
+  let userName;
+  let age;
+  userName = prompt("What is your name?");
+  age = prompt("How old are you?");
+  var agePlusTen = [(age + 10)];
+  document.write(`Hi ${userName}, in 10 years you will be ${[agePlusTen]}`)
 
   </script>
 
