--- a/day-2a.html
+++ b/day-2a.html
@@ -28,7 +28,7 @@
         let dogName;
         dogName = prompt("What is the name of your dog?");
         // Try it! Write a message about the dog's name!
-        document.write();
+        document.write(`${dogName}! It's time to go for a walk!`);
       </script>
     </p>
   </section>
@@ -39,7 +39,7 @@
 
     <script>
       // Try it! Write a message using both variables: userName and dogsName, from above.
-      document.write();
+      document.write(`${userName}, I'm sorry to inform you but your name has been changed to ${dogName}. Please refrain from eating the dog food.`);
     </script>
   </p>
 
