finished all days and rockpaperscissors

--- a/day-2c.html
+++ b/day-2c.html
@@ -17,8 +17,7 @@
   let age;
   userName = prompt("What is your name?");
   age = prompt("How old are you?");
-  var agePlusTen = [(age + 10)];
-  document.write(`Hi ${userName}, in 10 years you will be ${[agePlusTen]}`)
+  document.write(`Hi ${userName}, you are ${age} years old.`)
 
   </script>
 
