--- a/day-3.html
+++ b/day-3.html
@@ -29,8 +29,9 @@
   <script>
     // Try it! 
     let f4, f5;
-
-    document.write();
+    f3 = "kiwi";
+    f4 = "guava"
+    document.write(f3 + f4);
   </script>
   <p> Try it! One more time, make up a new fruit! </p>
   <h3>Another Example</h3>
@@ -46,13 +47,14 @@
   <p>
     I also like:
     <script>
-      document.write();
+      document.write(f3 + " " + f4);
     </script>
   </p>
   <p>
     But my favorite is:
     <script>
-      document.write();
+      f5 = "watermelon"
+      document.write(f5);
     </script>
   </p>
 
@@ -76,13 +78,16 @@
   <p>Try to make a fruit that is a combo of three or more fruits.</p>
   <script>
     let fruit2;
+    fruit2 = "tomato";
+    fruit2 += "apple";
+    fruit2 += "plum";
   </script>
   <p>
     The best fruit in the world would be a...
     <script>
 
 
-      document.write();
+      document.write(fruit2);
     </script>
   </p>
   <h3>Try it!</h3>
@@ -91,7 +96,12 @@
   <p>
     Really, the best is...
     <script>
-
+      fruit3 = "mango";
+      fruit3 += "-";
+      fruit3 += "cherimoya";
+      fruit3 += "-";
+      fruit3 += "quince"
+      document.write(fruit3)
 
 
     </script>
