fixed a couple syntax errors

--- a/day-1.html
+++ b/day-1.html
@@ -102,7 +102,7 @@
       document.write("<br>");
       document.write(`As of some one ${adverb} ${verb}, ${verb4} at my chamber door. `)
       document.write("<br>");
-      document.write(`“’Tis some ${noun2},” I muttered, “tapping at my ${noun3}— `)
+      document.write(`“Tis some ${noun2},” I muttered, “tapping at my ${noun3}— `)
       document.write("<br>");
       document.write(`Only this and nothing more.`)
     </script>
