--- a/day-2b.html
+++ b/day-2b.html
@@ -22,7 +22,7 @@
     favIceCream = prompt(`What is your fave ice cream ${userName}?`);
 
     // try it! Write a message about the favorite ice cream flavor.
-    document.write(`${userName}, please resist the ${favIceCream} ice cream, else you become corpulent.`);
+    document.write(`${userName}, please do not eat too much of the ${favIceCream} ice cream, else you become corpulent.`);
   </script>
 </body>
 </html>
