--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
       <a href="day-1.html">Day 1:</a> Strings, types, interpolation and variables
     </li>
     <li>
-      <a href="day-2.html">
-        Day 2:
-      </a> Input from prompt
+      <a href="day-2.html">Day 2:</a> Input from prompt
     </li>
     <li>
-      <a href="day-3.html">Day 3: </a>
-      Concatenating Strings</li>
+      <a href="day-3.html">Day 3:</a>Concatenating Strings</li>
 
   </ul>
   <script src="script.js"></script>
